# hydra-buddy

./: .coverage 2  .gitignore  docs.md  pyproject.toml  tests.md
hydra_buddies/: __init__.py  buddies.py  cli.py
outputs/2025-03-12/00-54-34/.hydra/: hydra.yaml
scripts/: upversion.py
tests/: config_reader.py  conftest.py  sandbox.ipynb  test.py  test_cli.py  test_reader.py  test_upversion.py  testthereader.py
