[tool.poetry]
name = "exercise"
version = "0.1.0"
description = ""
authors = ["MChrys <chrys.beltran@outlook.fr>"]
readme = "README.md"



[tool.poetry.dependencies]
python = "^3.12"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


